[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "pypdf>=5.5.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.1",
]
